# PyEngine

./: .gitignore  LICENSE  MANIFEST.in  README.md  bench_cython.py  pyproject.toml  requirements.txt  setup.py  setup_cython.py
.github/workflows/: tests.yml  wheels.yml
engine/: __init__.py  audio.py  build.py  cli.py  component.py  component_registry.py  drawing.py  gameobject.py  log.py  resources.py  scene.py  scriptable_object.py  transform.py  version.py  window_base.py
engine/animation/: __init__.py  animator.py  clip.py
engine/cython/: __init__.py  cy_batch_collision.pyx  cy_collider_bounds.pyx  cy_collision_2d.c  cy_collision_2d.pyx  cy_collision_bool_3d.c  cy_collision_bool_3d.pyx  cy_collision_manifold_3d.c  cy_collision_manifold_3d.pyx  cy_entities.c  cy_entities.pyx  cy_gameloop.c  cy_gameloop.pyx  cy_math.c  cy_math.pyx  cy_mesh_bvh.pyx  cy_particles.c  cy_particles.pyx  cy_quaternion.c  cy_quaternion.pyx  cy_raycast_3d.c  cy_raycast_3d.pyx  cy_response_2d.c  cy_response_2d.pyx  cy_response_3d.c  cy_response_3d.pyx  cy_transform.c  cy_transform.pyx  cy_vector2.c  cy_vector2.pyx  cy_vector3.c  cy_vector3.pyx
engine/d2/: __init__.py  camera2d.py  object2d.py  particle.py  scene2d.py  sprite.py  window2d.py
engine/d2/physics/: __init__.py  batch_collision.py  collider.py  collision.py  collision_bool.py  collision_manifold.py  geometry.py  raycast.py  response.py  rigidbody.py  types.py
engine/d3/: __init__.py  camera.py  light.py  object3d.py  particle.py  scene.py  window.py
engine/d3/physics/: __init__.py  batch_collision.py  collider.py  collision.py  collision_bool.py  collision_manifold.py  geometry.py  group.py  raycast.py  response.py  rigidbody.py  types.py
engine/d3/shaders/: __init__.py  bloom_blur.frag  bloom_extract.frag  collider.frag  collider.vert  forward.frag  forward.vert  forward_instanced.vert  fullscreen.vert  particle.frag  particle.vert  shadow.frag  shadow.vert  shadow_instanced.vert  ssao.frag  tonemap.frag
engine/editor/: __init__.py  console.py  gizmo.py  hierarchy.py  project_browser.py  scene.py  selection.py  undo.py  viewport.py  widgets.py  window.py
engine/editor/mixins/: __init__.py  files_panel.py  play_mode.py  prefab_inspector.py  scene_io.py  script_components.py  scriptable_inspector.py
engine/graphics/: __init__.py  material.py  shader.py  shader_material.py
engine/input/: __init__.py  input.py  keys.py
engine/physics/: __init__.py  solver_constants.py  world.py
engine/rendering/: __init__.py  layers.py
engine/types/: __init__.py  color.py  quaternion.py  vector2.py  vector3.py
engine/ui/: __init__.py  core.py  manager.py  widgets.py
engine3d/: audio.py  build.py  component.py  drawing.py  gameobject.py  resources.py  scene.py  scriptable_object.py  transform.py  window_base.py
engine3d/editor/: gizmo.py  selection.py  undo.py  window.py
engine3d/engine2d/: __init__.py  camera2d.py  object2d.py  scene2d.py  window2d.py
engine3d/engine3d/: __init__.py  camera.py  light.py  object3d.py  particle.py  scene.py  window.py
engine3d/graphics/: material.py  shadow.py
engine3d/physics/: collision_manifold.py  rigidbody.py
engine3d/physics2d/: __init__.py  collider.py  collision.py  collision_bool.py  collision_manifold.py  geometry.py  raycast.py  rigidbody.py  types.py
engine3d/physics3d/: __init__.py  collider.py  collision.py  collision_bool.py  collision_manifold.py  group.py  raycast.py  rigidbody.py
engine3d/types/: __init__.py  vector3.py
engine3d/ui/: __init__.py  core.py  manager.py  widgets.py
examples/: example_2d_game.py  example_2d_shaders.py  example_2d_ui.py  example_animation.py  example_audio.py  example_basic.py  example_collision.py  example_collision_groups.py  example_fps_camera.py  example_game.py  example_hierarchy.py  example_many_objects.py  example_materials.py  example_multi_camera.py  example_particles.py  example_particles_2d.py  example_resources.py  example_rotational_physics.py  example_rotational_physics_2d.py  example_scene_loading.py  example_script.py  example_scriptable_object.py  example_serializable.py  example_serialization.py  example_shaders.py  example_shadows.py
tests/: conftest.py  test_2d_collision.py  test_angular_velocity.py  test_animation.py  test_audio.py  test_batch_collision.py  test_collider_groups.py  test_collision_opt.py  test_continuous_sliding.py  test_coroutines.py  test_cython_batch_improvements.py  test_cython_new_features.py  test_debug_raycast.py  test_engine_improvements.py  test_gameobject_features.py  test_graphics_pipeline.py  test_input.py  test_multipoint_and_solver.py  test_particles.py  test_physics_material.py  test_physics_movement.py  test_physics_world.py  test_prefab_and_scriptable.py  test_quaternion_and_physics.py  test_raycast.py  test_resources.py  test_rotational_physics_edge_cases.py  test_rotational_response.py  test_rotational_response_2d.py  test_scene_and_camera.py  test_script_lifecycle.py  test_shaders.py  test_sprite_sheet.py  test_transform_hierarchy.py  test_types_math.py  test_ui.py  test_window_integration.py  window_support.py
