[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyengine"
version = "0.1.0"
description = "A simple, GPU-accelerated 2D/3D game engine for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PyEngine Contributors"}
]
keywords = ["2d", "3d", "game", "engine", "graphics", "pygame", "moderngl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "pygame>=2.6.0",
    "numpy>=1.20.0",
    "pyglet>=2.1.0",
    "pillow>=11.0.0",
    "trimesh>=4.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
gpu = ["moderngl>=5.6.0", "moderngl-window>=2.4.0"]
editor = ["PySide6>=6.6.0"]
dev = ["pytest>=9.0.0"]
all = ["moderngl>=5.6.0", "moderngl-window>=2.4.0", "PySide6>=6.6.0", "pytest>=9.0.0"]

[project.scripts]
pyengine = "engine.cli:main"

[project.urls]
Homepage = "https://github.com/Sepuh077/3D-engine"
Documentation = "https://github.com/Sepuh077/3D-engine#readme"
Repository = "https://github.com/Sepuh077/3D-engine"
Issues = "https://github.com/Sepuh077/3D-engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["tests*", "examples*", "example*"]
