[build-system]
requires = [
    # Modern setuptools is required for reliable extension compilation
    # during `pip install -e .` (PEP 660 editable installs) and wheel builds.
    "setuptools>=68",
    "wheel",
    # Cython + numpy are pulled automatically into the isolated build
    # environment by pip. This is what allows `pip install -e .` or
    # `pip install pyengine` to produce working Cython modules without the
    # user manually running setup_cython.py.
    "Cython>=3.0",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyengine"
version = "0.1.0"
description = "A simple, GPU-accelerated 2D/3D game engine for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
# SPDX expression as a simple string is the current recommended form.
# You can alternatively use license = { text = "MIT" } on newer setuptools.
authors = [
    {name = "PyEngine Contributors"}
]
keywords = ["2d", "3d", "game", "engine", "graphics", "pygame", "moderngl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "pygame>=2.6.0",
    "numpy>=1.20.0",
    "pillow>=11.0.0",
    "trimesh>=4.0.0",
    "moderngl>=5.6.0",
]

[project.optional-dependencies]
editor = ["PySide6>=6.6.0"]
# dev: test + rebuild Cython in-tree (setup_cython.py / no-isolation builds).
# setuptools is listed so `python setup_cython.py build_ext --inplace` works
# without a separate manual install.
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "Cython>=3.0",
    "setuptools>=68",
]
# explicit build deps for people who use --no-build-isolation
build = ["Cython>=3.0", "setuptools>=68", "wheel", "numpy>=1.20.0"]
all = [
    "PySide6>=6.6.0",
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "Cython>=3.0",
    "setuptools>=68",
]

[project.scripts]
pyengine = "engine.cli:main"

[project.urls]
Homepage = "https://github.com/Sepuh077/3D-engine"
Documentation = "https://github.com/Sepuh077/3D-engine#readme"
Repository = "https://github.com/Sepuh077/3D-engine"
Issues = "https://github.com/Sepuh077/3D-engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["tests*", "examples*", "example*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
# Ship .pyx sources; Cython compiles them during install/wheel builds.
# Pre-generated .c is optional (sdist only) — not required in the editable tree.
"engine.cython" = ["*.pyx", "*.pxd", "*.pxi", "py.typed"]
"engine" = ["py.typed"]
"engine.d3.shaders" = ["*.vert", "*.frag", "*.glsl"]

# =============================================================================
# cibuildwheel configuration
# This is how numpy, pandas, scikit-learn, Pillow, etc. produce wheels that
# "just work" with pip install on all major platforms.
# =============================================================================
[tool.cibuildwheel]
# Build for the Python versions we officially support
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"

# Skip PyPy and musllinux (Alpine) for now. Add them later if needed.
skip = "pp* *-musllinux*"

# Show more output when building (helpful while setting this up)
build-verbosity = 1

# On Linux we get highly portable "manylinux" wheels thanks to auditwheel.
# cibuildwheel runs auditwheel automatically.

[tool.cibuildwheel.linux]
# Use a relatively modern manylinux image. This is fine for most users.
# You can pin a specific one if you have glibc requirements.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Make sure build dependencies are available (already declared in build-system,
# but being explicit here is harmless and good for documentation).
before-build = "pip install cython numpy"

[tool.cibuildwheel.macos]
# On macOS we build native wheels for both Intel and Apple Silicon.
# cibuildwheel on the right runner will do the right thing.

[tool.cibuildwheel.windows]
# Windows wheels are built with MSVC on the windows-* runners.

[tool.pytest.ini_options]
markers = [
    "window: opens a real OpenGL window (runs by default; set PYENGINE_SKIP_WINDOW_TESTS=1 on headless CI)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["engine"]
omit = [
    "engine/cython/*",
    "engine/editor/*",
    "*/tests/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py38"
line-length = 100
src = ["engine", "tests", "examples"]
exclude = [
    "build",
    "dist",
    "venv",
    "venv_linux",
    "engine/cython",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled gradually)
    "B008",  # function calls in defaults (InspectorField patterns)
    "UP006", # keep typing.List etc for 3.8
    "UP007", # keep Optional/Union for 3.8
    "UP035", # keep typing imports for 3.8
    "UP045", # keep Optional for 3.8
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402", "F401", "F841"]
"tests/*" = ["B", "F401", "F841"]
"engine/cli.py" = ["E501"]
